<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="30dp">

    <TextView
        android:id="@+id/movie_details_main_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_details_movie"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#EF6C00"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/movie_details_poster_img"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:src="@drawable/basic_image"
            android:scaleType="fitXY"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:id="@+id/movie_details_cover_img"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:src="@drawable/basic_image"
            android:scaleType="fitXY" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/movie_details_title_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#EF6C00"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/movie_title_label"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/movie_details_title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/movie_default_title"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/movie_details_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#EF6C00"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/movie_release_date_label"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/movie_details_release_date_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/movie_default_release_date"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/movie_details_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#EF6C00"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/movie_rating_label"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/movie_details_rating_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/movie_default_rating"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/movie_details_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EF6C00"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/movie_description_label"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/movie_details_description_txt"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/holo_orange_dark"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scrollbars = "vertical"
        android:text="@string/movie_default_description"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/movie_cast_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_title_cast"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#EF6C00"
        android:textSize="20sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_cast_recycler_view_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="" />

</LinearLayout>